syntax = "proto3";

message PersonMessageList {
  string id = 1;
  string first_name = 2;
  Status last_name = 3;
  string company_name = 4;
}

message Empty {
}

service PersonService {
    rpc Get(Empty) returns (PersonMessageList);
}